src/OpenCvSharpExtern/features2d_Feature2D.h

CVAPI(ExceptionStatus) features2d_KAZE_setUpright(cv::xfeatures2d::KAZE *obj, int val)
{
    BEGIN_WRAP
    obj->setUpright(val != 0);
    END_WRAP
}
CVAPI(ExceptionStatus) features2d_KAZE_getUpright(cv::xfeatures2d::KAZE *obj, int *returnValue)
{
    BEGIN_WRAP
    *returnValue = obj->getUpright() ? 1 : 0;
    END_WRAP
}
CVAPI(ExceptionStatus) features2d_AKAZE_create(
    int descriptor_type, int descriptor_size, int descriptor_channels,
    float threshold, int nOctaves, int nOctaveLayers, int diffusivity,
    cv::Ptr<cv::xfeatures2d::AKAZE> **returnValue)
{
    BEGIN_WRAP
    const auto ptr = cv::xfeatures2d::AKAZE::create(
        static_cast<cv::xfeatures2d::AKAZE::DescriptorType>(descriptor_type), descriptor_size, descriptor_channels,
        threshold, nOctaves, nOctaveLayers, static_cast<cv::xfeatures2d::KAZE::DiffusivityType>(diffusivity));
    *returnValue = clone(ptr);
    END_WRAP
}
CVAPI(ExceptionStatus) features2d_Ptr_AKAZE_delete(cv::Ptr<cv::xfeatures2d::AKAZE> *ptr)
{
    BEGIN_WRAP
    delete ptr;
    END_WRAP
}
CVAPI(ExceptionStatus) features2d_AKAZE_setDescriptorType(cv::xfeatures2d::AKAZE *obj, int val)
{
    BEGIN_WRAP
    obj->setDescriptorType(static_cast<cv::xfeatures2d::AKAZE::DescriptorType>(val));
    END_WRAP
}
CVAPI(ExceptionStatus) features2d_AKAZE_getDescriptorType(cv::xfeatures2d::AKAZE *obj, int *returnValue)
{
    BEGIN_WRAP
    *returnValue = static_cast<int>(obj->getDescriptorType());
    END_WRAP
}
CVAPI(ExceptionStatus) features2d_AKAZE_setDescriptorSize(cv::xfeatures2d::AKAZE *obj, int val)
{
    BEGIN_WRAP
    obj->setDescriptorSize(val);
    END_WRAP
}
CVAPI(ExceptionStatus) features2d_AKAZE_getDescriptorSize(cv::xfeatures2d::AKAZE *obj, int *returnValue)
{
    BEGIN_WRAP
    *returnValue = obj->getDescriptorSize();
    END_WRAP
}
CVAPI(ExceptionStatus) features2d_AKAZE_setDescriptorChannels(cv::xfeatures2d::AKAZE *obj, int val)
{
    BEGIN_WRAP
    obj->setDescriptorChannels(val);
    END_WRAP
}
CVAPI(ExceptionStatus) features2d_AKAZE_getDescriptorChannels(cv::xfeatures2d::AKAZE *obj, int *returnValue)
{
    BEGIN_WRAP
    *returnValue = obj->getDescriptorChannels();
    END_WRAP
}
CVAPI(ExceptionStatus) features2d_AKAZE_setThreshold(cv::xfeatures2d::AKAZE *obj, double val)
{
    BEGIN_WRAP
    obj->setThreshold(val);
    END_WRAP
}
CVAPI(ExceptionStatus) features2d_AKAZE_getThreshold(cv::xfeatures2d::AKAZE *obj, double *returnValue)
{
    BEGIN_WRAP
    *returnValue = obj->getThreshold();
    END_WRAP
}
CVAPI(ExceptionStatus) features2d_AKAZE_setNOctaves(cv::xfeatures2d::AKAZE *obj, int val)
{
    BEGIN_WRAP
    obj->setNOctaves(val);
    END_WRAP
}
CVAPI(ExceptionStatus) features2d_AKAZE_getNOctaves(cv::xfeatures2d::AKAZE *obj, int *returnValue)
{
    BEGIN_WRAP
    *returnValue = obj->getNOctaves();
    END_WRAP
}
CVAPI(ExceptionStatus) features2d_AKAZE_setNOctaveLayers(cv::xfeatures2d::AKAZE *obj, int val)
{
    BEGIN_WRAP
    obj->setNOctaveLayers(val);
    END_WRAP
}
CVAPI(ExceptionStatus) features2d_AKAZE_getNOctaveLayers(cv::xfeatures2d::AKAZE *obj, int *returnValue)
{
    BEGIN_WRAP
    *returnValue = obj->getNOctaveLayers();
    END_WRAP
}
CVAPI(ExceptionStatus) features2d_AKAZE_setDiffusivity(cv::xfeatures2d::AKAZE *obj, int val)
{
    BEGIN_WRAP
    obj->setDiffusivity(static_cast<cv::xfeatures2d::KAZE::DiffusivityType>(val));
    END_WRAP
}
CVAPI(ExceptionStatus) features2d_AKAZE_getDiffusivity(cv::xfeatures2d::AKAZE *obj, int *returnValue)
{
    BEGIN_WRAP
    *returnValue = static_cast<int>(obj->getDiffusivity());
    END_WRAP
}